--- a/templates/gemba/pareto_details_search.html
+++ b/templates/gemba/pareto_details_search.html
@@ -11,7 +11,12 @@
                 <th scope="col">Job</th>
                 <th scope="col">Output</th>
                 <th scope="col">Good</th>
+                <th scope="col">Reworked Good</th>
                 <th scope="col">Scrap</th>
+                <th scope="col">A</th>
+                <th scope="col">P</th>
+                <th scope="col">Q</th>
+                <th scope="col">OEE</th>
                 <th scope="col">Takt time</th>
                 <th scope="col">Pareto ID</th>
                 <th scope="col">Pareto Date</th>
@@ -25,7 +30,12 @@
                 <td>{{ object.job }}</td>
                 <td>{{ object.output }}</td>
                 <td>{{ object.good }}</td>
+                <td>{{ object.rework }}</td>
                 <td>{{ object.scrap }}</td>
+                <td>{{ object.availability }}%</td>
+                <td>{{ object.performance }}%</td>
+                <td>{{ object.quality }}%</td>
+                <td>{{ object.oee }}%</td>
                 <td>{{ object.takt_time }}</td>
                 <td>{{ object.pareto_id }}</td>
                 <td>{{ object.pareto_date|date:"d-m-Y" }}</td>
