--- a/templates/gemba/scrap_rate.html
+++ b/templates/gemba/scrap_rate.html
@@ -106,7 +106,7 @@ Week starts on Sunday at 21:45 for each line. W/C shows Monday dates.
             <td><b>{% if totals.total_weekly_1 == 0 %}{% else %}{{ totals.total_weekly_1 }}{% endif %}</b></td>
             <td><b>{% if totals.overall_scrap_rate_1 == 0 %}{% else %}{{ totals.overall_scrap_rate_1 }}%{% endif %}</b></td>
             <td><b>{% if totals.total_weekly_2 == 0 %}{% else %}{{ totals.total_weekly_2 }}{% endif %}</b></td>
-            <td><b>{% if totals.overall_scrap_rate_2 == 0 %}{% else %} {{ totals.overall_scrap_rate_2 }%}{% endif %}</b></td>
+            <td><b>{% if totals.overall_scrap_rate_2 == 0 %}{% else %} {{ totals.overall_scrap_rate_2 }}%{% endif %}</b></td>
             <td><b>{% if totals.total_weekly_3 == 0 %}{% else %}{{ totals.total_weekly_3 }}{% endif %}</b></td>
             <td><b>{% if totals.overall_scrap_rate_3 == 0 %}{% else %}{{ totals.overall_scrap_rate_3 }}%{% endif %}</b></td>
             <td><b>{% if totals.total_weekly_4 == 0 %}{% else %}{{ totals.total_weekly_4 }}{% endif %}</b></td>
