--- a/templates/gemba/downtime_rate.html
+++ b/templates/gemba/downtime_rate.html
@@ -105,7 +105,7 @@ Week starts on Sunday at 21:45 for each line. W/C shows Monday dates.
             <td><b>{% if totals.total_weekly_1 == 0 %}{% else %}{{ totals.total_weekly_1 }}{% endif %}</b></td>
             <td><b>{% if totals.overall_down_rate_1 == 0 %}{% else %}{{ totals.overall_down_rate_1 }}%{% endif %}</b></td>
             <td><b>{% if totals.total_weekly_2 == 0 %}{% else %}{{ totals.total_weekly_2 }}{% endif %}</b></td>
-            <td><b>{% if totals.overall_down_rate_2 == 0 %}{% else %} {{ totals.overall_down_rate_2 }%}{% endif %}</b></td>
+            <td><b>{% if totals.overall_down_rate_2 == 0 %}{% else %} {{ totals.overall_down_rate_2 }}%{% endif %}</b></td>
             <td><b>{% if totals.total_weekly_3 == 0 %}{% else %}{{ totals.total_weekly_3 }}{% endif %}</b></td>
             <td><b>{% if totals.overall_down_rate_3 == 0 %}{% else %}{{ totals.overall_down_rate_3 }}%{% endif %}</b></td>
             <td><b>{% if totals.total_weekly_4 == 0 %}{% else %}{{ totals.total_weekly_4 }}{% endif %}</b></td>
@@ -120,6 +120,29 @@ Week starts on Sunday at 21:45 for each line. W/C shows Monday dates.
             <td><b>{% if totals.overall_down_rate_8 == 0 %}{% else %}{{ totals.overall_down_rate_8 }}%{% endif %}</b></td>
             <td><b>{{ totals.total_all_weeks }}</b></td>
             <td><b>{{ totals.all_down_rate }}%</b></td>
+        </tr>
+        <tr style="font-size:0.7vw;">
+            <th>Total uptime</th>
+            <td><b>{% if totals.total_uptime_0 == 0 %}{% else %}{{ totals.total_uptime_0 }}{% endif %}</b></td>
+            <td><b>{% if totals.uptime_rate_0 == 0 %}{% else %}{{ totals.uptime_rate_0 }}%{% endif %}</b> </td>
+            <td><b>{% if totals.total_uptime_1 == 0 %}{% else %}{{ totals.total_uptime_1 }}{% endif %}</b></td>
+            <td><b>{% if totals.uptime_rate_1 == 0 %}{% else %}{{ totals.uptime_rate_1 }}%{% endif %}</b></td>
+            <td><b>{% if totals.total_uptime_2 == 0 %}{% else %}{{ totals.total_uptime_2 }}{% endif %}</b></td>
+            <td><b>{% if totals.uptime_rate_2 == 0 %}{% else %} {{ totals.uptime_rate_2 }}%{% endif %}</b></td>
+            <td><b>{% if totals.total_uptime_3 == 0 %}{% else %}{{ totals.total_uptime_3 }}{% endif %}</b></td>
+            <td><b>{% if totals.uptime_rate_3 == 0 %}{% else %}{{ totals.uptime_rate_3 }}%{% endif %}</b></td>
+            <td><b>{% if totals.total_uptime_4 == 0 %}{% else %}{{ totals.total_uptime_4 }}{% endif %}</b></td>
+            <td><b>{% if totals.uptime_rate_4 == 0 %}{% else %}{{ totals.uptime_rate_4 }}%{% endif %}</b></td>
+            <td><b>{% if totals.total_uptime_5 == 0 %}{% else %}{{ totals.total_uptime_5 }}{% endif %}</b></td>
+            <td><b>{% if totals.uptime_rate_5 == 0 %}{% else %}{{ totals.uptime_rate_5 }}%{% endif %}</b></td>
+            <td><b>{% if totals.total_uptime_6 == 0 %}{% else %}{{ totals.total_uptime_6 }}{% endif %}</b></td>
+            <td><b>{% if totals.uptime_rate_6 == 0 %}{% else %}{{ totals.uptime_rate_6 }}%{% endif %}</b></td>
+            <td><b>{% if totals.total_uptime_7 == 0 %}{% else %}{{ totals.total_uptime_7 }}{% endif %}</b></td>
+            <td><b>{% if totals.uptime_rate_7 == 0 %}{% else %}{{ totals.uptime_rate_7 }}%{% endif %}</b></td>
+            <td><b>{% if totals.total_uptime_8 == 0 %}{% else %}{{ totals.total_uptime_8 }}{% endif %}</b></td>
+            <td><b>{% if totals.uptime_rate_8 == 0 %}{% else %}{{ totals.uptime_rate_8 }}%{% endif %}</b></td>
+            <td><b>{{ totals.total_all_uptime }}</b></td>
+            <td><b>{{ totals.all_uptime_rate }}%</b></td>
         </tr>
          <tr style="font-size:0.7vw;">
             <th>Total Available Time</th>
