--- a/templates/gemba/pareto_before_close.html
+++ b/templates/gemba/pareto_before_close.html
@@ -83,6 +83,28 @@
         </tr>
         </tbody>
         </table>
+        <table class="table table">
+        <thead>
+        <tr>
+            <th scope="col">Job</th>
+            <th scope="col">A</th>
+            <th scope="col">P</th>
+            <th scope="col">Q</th>
+            <th scope="col">OEE</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for job in calculation_by_job %}
+        <tr>
+            <td>{{ job.job }}</td>
+            <td>{{ job.availability }}</td>
+            <td>{{ job.performance }}</td>
+            <td>{{ job.quality }}</td>
+            <td>{{ job.oee }}</td>
+        </tr>
+        {% endfor %}
+        </tbody>
+        </table>
     </div>
 
     <div class = "col">
@@ -106,7 +128,7 @@
                 {{ performance }}%<br/>
                 {{ quality }}%<br/>
                     <br/>
-                <p style="font-size:1vw;"><b>{{ oee }}%</b></p>
+                <p><b>{{ oee }}%</b></p>
                 </td>
             </tr>
             </tbody>
