--- a/templates/gemba/pareto_before_close.html
+++ b/templates/gemba/pareto_before_close.html
@@ -94,6 +94,8 @@
         </tr>
         </thead>
         <tbody>
+        </br>
+        OEE by job:
         {% for job in calculation_by_job %}
         <tr>
             <td>{{ job.job }}</td>
