--- a/templates/gemba/pareto_details.html
+++ b/templates/gemba/pareto_details.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load mathfilters %}
 
-<h4>Pareto Detail View</h4>
+<h4>Pareto No: {{ pareto_list.id}}</h4>
 <table class="table table-hover">
         <thead>
         <tr>
