--- a/templates/gemba/downtime_rate.html
+++ b/templates/gemba/downtime_rate.html
@@ -22,7 +22,7 @@ Week starts on Sunday at 21:45 for each line. W/C shows Monday dates.
              <th colspan="2" style="text-align: center;">Week-3</th>
              <th colspan="2" style="text-align: center;">Week-2</th>
             <th colspan="2" style="text-align: center;">Week-1</th>
-            <th colspan="2" style="text-align: center;">Current Week</th>
+            <th colspan="2" style="text-align: center;">Base Week</th>
             <th colspan="2"  style="text-align: center;">Total</th>
         </tr>
         <tr style="font-size:0.7vw;">
@@ -66,39 +66,39 @@ Week starts on Sunday at 21:45 for each line. W/C shows Monday dates.
         {% for object in report %}
             <tr style="font-size:0.7vw;">
                 <th>{{ object.down }}</th>
-                <td><a href="{% url 'gemba_app:display-downtime-in-a-week' line_id=line_id week_no=object.week_0 down_id=object.down_id %}">
+                <td><a href="{% url 'gemba_app:display-downtime-in-a-week' line_id=line_id base_day=base_day week_no=object.week_0 down_id=object.down_id %}">
                     {% if object.qty_0 == 0 %} {% else %} {{ object.qty_0 }} {% endif %}</a></td>
                 <td>{% if object.down_rate_0 == 0 %} {% elif object.down_rate_0 > 5 %}
                     <div class="high">{{ object.down_rate_0 }}%</div>{% else %}{{ object.down_rate_0 }}%{% endif %}</td>
-                <td><a href="{% url 'gemba_app:display-downtime-in-a-week' line_id=line_id week_no=object.week_1 down_id=object.down_id %}">
+                <td><a href="{% url 'gemba_app:display-downtime-in-a-week' line_id=line_id base_day=base_day week_no=object.week_1 down_id=object.down_id %}">
                     {% if object.qty_1 == 0 %} {% else %} {{ object.qty_1 }} {% endif %}</a></td>
                 <td>{% if object.down_rate_1 == 0 %} {% elif object.down_rate_1 > 5 %}
                     <div class="high">{{ object.down_rate_1 }}%</div>{% else %}{{ object.down_rate_1 }}%{% endif %}</td>
-                <td><a href="{% url 'gemba_app:display-downtime-in-a-week' line_id=line_id week_no=object.week_2 down_id=object.down_id %}">
+                <td><a href="{% url 'gemba_app:display-downtime-in-a-week' line_id=line_id base_day=base_day week_no=object.week_2 down_id=object.down_id %}">
                     {% if object.qty_2 == 0 %} {% else %} {{ object.qty_2 }} {% endif %}</a></td>
                 <td>{% if object.down_rate_2 == 0 %} {% elif object.down_rate_2 > 5 %}
                     <div class="high">{{ object.down_rate_2 }}%</div>{% else %}{{ object.down_rate_2 }}%{% endif %}</td>
-                <td><a href="{% url 'gemba_app:display-downtime-in-a-week' line_id=line_id week_no=object.week_3 down_id=object.down_id %}">
+                <td><a href="{% url 'gemba_app:display-downtime-in-a-week' line_id=line_id base_day=base_day week_no=object.week_3 down_id=object.down_id %}">
                     {% if object.qty_3 == 0 %} {% else %} {{ object.qty_3 }} {% endif %}</a></td>
                 <td>{% if object.down_rate_3 == 0 %} {% elif object.down_rate_3 > 5 %}
                     <div class="high">{{ object.down_rate_3 }}%</div>{% else %}{{ object.down_rate_3 }}%{% endif %}</td>
-                <td><a href="{% url 'gemba_app:display-downtime-in-a-week' line_id=line_id week_no=object.week_4 down_id=object.down_id %}">
+                <td><a href="{% url 'gemba_app:display-downtime-in-a-week' line_id=line_id base_day=base_day week_no=object.week_4 down_id=object.down_id %}">
                     {% if object.qty_4 == 0 %} {% else %} {{ object.qty_4 }} {% endif %}</a></td>
                 <td>{% if object.down_rate_4 == 0 %} {% elif object.down_rate_4 > 5 %}
                     <div class="high">{{ object.down_rate_4 }}%</div>{% else %}{{ object.down_rate_4 }}%{% endif %}</td>
-                <td><a href="{% url 'gemba_app:display-downtime-in-a-week' line_id=line_id week_no=object.week_5 down_id=object.down_id %}">
+                <td><a href="{% url 'gemba_app:display-downtime-in-a-week' line_id=line_id base_day=base_day week_no=object.week_5 down_id=object.down_id %}">
                     {% if object.qty_5 == 0 %} {% else %} {{ object.qty_5 }} {% endif %}</a></td>
                 <td>{% if object.down_rate_5 == 0 %} {% elif object.down_rate_5 > 5 %}
                     <div class="high">{{ object.down_rate_5 }}%</div>{% else %}{{ object.down_rate_5 }}%{% endif %}</td>
-                <td><a href="{% url 'gemba_app:display-downtime-in-a-week' line_id=line_id week_no=object.week_6 down_id=object.down_id %}">
+                <td><a href="{% url 'gemba_app:display-downtime-in-a-week' line_id=line_id base_day=base_day week_no=object.week_6 down_id=object.down_id %}">
                     {% if object.qty_6 == 0 %} {% else %} {{ object.qty_6 }} {% endif %}</a></td>
                 <td>{% if object.down_rate_6 == 0 %} {% elif object.down_rate_6 > 5 %}
                     <div class="high">{{ object.down_rate_6 }}%</div>{% else %}{{ object.down_rate_6 }}%{% endif %}</td>
-                <td><a href="{% url 'gemba_app:display-downtime-in-a-week' line_id=line_id week_no=object.week_7 down_id=object.down_id %}">
+                <td><a href="{% url 'gemba_app:display-downtime-in-a-week' line_id=line_id base_day=base_day week_no=object.week_7 down_id=object.down_id %}">
                     {% if object.qty_7 == 0 %} {% else %} {{ object.qty_7 }} {% endif %}</a></td>
                 <td>{% if object.down_rate_7 == 0 %} {% elif object.down_rate_7 > 5 %}
                     <div class="high">{{ object.down_rate_7 }}%</div>{% else %}{{ object.down_rate_7 }}%{% endif %}</td>
-                <td><a href="{% url 'gemba_app:display-downtime-in-a-week' line_id=line_id week_no=object.week_8 down_id=object.down_id %}">
+                <td><a href="{% url 'gemba_app:display-downtime-in-a-week' line_id=line_id base_day=base_day week_no=object.week_8 down_id=object.down_id %}">
                     {% if object.qty_8 == 0 %} {% else %} {{ object.qty_8 }} {% endif %}</a></td>
                 <td>{% if object.down_rate_8 == 0 %} {% elif object.down_rate_8 > 5 %}
                     <div class="high">{{ object.down_rate_8 }}%</div>{% else %}{{ object.down_rate_8 }}%{% endif %}</td>
