--- a/templates/gemba/lines.html
+++ b/templates/gemba/lines.html
@@ -1,11 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
-<h4>Select line:</h4>
-        {% for object in lines_qs %}
-            <tr>
-                </br>
-                <td><a href="{% url 'gemba_app:scrap-rate-report' line_id=object.pk %}">{{ object.name }}</a></td>
-                </br>
-            </tr>
+<form action="{% url 'gemba_app:scrap-rate-report' %}" method="get">
+<h4>Select any day of the base week:</h4>
+     <input name="base_day" type="date">
+     </br>
+     </br>
+    <h4>Select a line:</h4>
+        {% for o in lines_qs %}
+        <tr>
+            <td>{{o.name}}&nbsp;&nbsp;<input type="radio" name="Line" value="{{o.name}}"></td>
+            </br>
+        </tr>
         {% endfor %}
+      </br>
+    </br>
+     <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Search
+    </button>
+ </form>
 {% endblock %}
