--- a/templates/gemba/daily_oee_report.html
+++ b/templates/gemba/daily_oee_report.html
@@ -14,7 +14,7 @@
         </tr>
         {% endfor %}
       </br>
-     <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Search
+     <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Filter shift
     </button>
  </form>
 
