--- a/templates/gemba/display_scrap_in_a_week.html
+++ b/templates/gemba/display_scrap_in_a_week.html
@@ -5,21 +5,34 @@
 <table class="table table-hover">
         <thead>
         <tr>
-            <th scope="col">Qty</th>
-            <th scope="col">Job</th>
             <th scope="col">Pareto ID</th>
+            <th scope="col">Qty</th>
+            <th scope="col">Detailed Scrap Rate</th>
+            <th scope="col">Overall Scrap Rate</th>
+            <th scope="col">Job</th>
             <th scope="col">Pareto Date</th>
         </tr>
         </thead>
         <tbody>
-        {% for object in scrap_qs %}
+        {% for object in report %}
             <tr>
-                <td>{{ object.qty }}</td>
-                <td>{{ object.job }}</td>
                 <td><a href="{% url 'gemba_app:pareto-detail-view' pk=object.pareto_id %}">{{ object.pareto_id }}</a></td>
+                <td>{{ object.qty }} parts</td>
+                <td>{{ object.scrap_rate_1 }}%</td>
+                <td>{{ object.scrap_rate_2 }}%</td>
+                <td>{{ object.job }}</td>
                 <td>{{ object.pareto_date }}</td>
-           {% endfor %}
             </tr>
+        {% endfor %}
+        {% for object in total %}
+            <tr>
+                <td></td>
+                <td><b>{{ object.qty }} parts</b></td>
+                <td><b>{{ object.scrap_rate_1 }}%</b></td>
+                <td><b>{{ object.scrap_rate_2 }}%</b></td>
+                <td></td>
+                <td></td>
+        {% endfor %}
         </tbody>
     </table>
 
